--- a/index.html
+++ b/index.html
@@ -9,18 +9,13 @@
 
 </head>
 <body>
-  Valor: <input id="valor" type="text"> <br>
-  Taxa de juros: <input id="juros" type="text"> <br>
-  <button onclick="total()">Enviar</button>
-  
-  <br><br><br><br>
-  <span id="resultado"></span><br><br>
-  Bimestre 01: <input id="b1" type="text"> <br>
-  Bimestre 02: <input id="b2" type="text"> <br>
-  Bimestre 03: <input id="b3" type="text"> <br>
-  Bimestre 04: <input id="b4" type="text"> <br>
-  <button onclick="soma()">Soma Notas</button>
 
+Capital: <input id="valor" type="text"> <br>
+Taxa de Juros: <input id="juros" type="text"> <br>
+
+Quantidade meses: <input id="meses" type="text"> <br>
+
+<button onclick="total()">Calcular</button>
 
 </body>
 </html>
