--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,10 @@
 </head>
 <body>
    <div class="calculadora">
-    <span id="resultado">Total:0,0</span><br>
+      <div class="spResultado">
+      <span id="resultado">Total:0,0</span><br>
+      </div>
+     
      Capital: <input id="valor" type="text"> <br>
      Taxa de Juros: <input id="juros" type="text"> <br>
      Quantidade meses: <input id="meses" type="text"> <br>
@@ -23,5 +26,3 @@
    </div>
 </body>
 </html>
-Footer
-© 2022 GitHub, Inc.
